packages/dcflight/ios/Classes/DCFlightFfi.h

// Event callback function pointer type
// Signature: void callback(int32_t viewId, const char* eventType, const char* eventDataJson)
typedef void (*DCFlightEventCallback)(int32_t viewId, const char* eventType, const char* eventDataJson);
// Screen dimensions callback function pointer type
// Signature: void callback(const char* dimensionsJson)
typedef void (*DCFlightScreenDimensionsCallback)(const char* dimensionsJson);
const char* dcflight_get_queued_events(void);
void dcflight_process_event_queue(void);
// Screen dimensions
bool dcflight_get_screen_dimensions(char* resultJson, int32_t resultSize);
void dcflight_set_screen_dimensions_callback(DCFlightScreenDimensionsCallback callback);
void dcflight_send_screen_dimensions_changed(const char* dimensionsJson);
const char* dcflight_get_queued_screen_dimensions(void);
void dcflight_process_screen_dimensions_queue(void);
// Hot restart
bool dcflight_get_session_token(char* resultJson, int32_t resultSize);
bool dcflight_create_session_token(char* resultJson, int32_t resultSize);
void dcflight_clear_session_token(void);
void dcflight_cleanup_views(void);