packages/dcflight/lib/framework/renderer/interface/src/generated/dcflight_ffi_bindings.dart


  late final _dcflight_get_screen_dimensionsPtr = _lookup<
          ffi
          .NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Int32)>>(
      'dcflight_get_screen_dimensions');
  late final _dcflight_get_screen_dimensions =
      _dcflight_get_screen_dimensionsPtr
          .asFunction<bool Function(ffi.Pointer<ffi.Char>, int)>();

  void dcflight_set_screen_dimensions_callback(
    DCFlightScreenDimensionsCallback callback,
  ) {
    return _dcflight_set_screen_dimensions_callback(
      callback,
    );
  }

  late final _dcflight_set_screen_dimensions_callbackPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(DCFlightScreenDimensionsCallback)>>(
      'dcflight_set_screen_dimensions_callback');
  late final _dcflight_set_screen_dimensions_callback =
      _dcflight_set_screen_dimensions_callbackPtr
          .asFunction<void Function(DCFlightScreenDimensionsCallback)>();

  /// Send screen dimensions change to Dart via the FFI callback (helper function for Swift)
  /// dimensionsJson: JSON string containing screen dimensions
  void dcflight_send_screen_dimensions_changed(
    ffi.Pointer<ffi.Char> dimensionsJson,
  ) {
    return _dcflight_send_screen_dimensions_changed(
      dimensionsJson,
    );
  }

  late final _dcflight_send_screen_dimensions_changedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'dcflight_send_screen_dimensions_changed');
  late final _dcflight_send_screen_dimensions_changed =
      _dcflight_send_screen_dimensions_changedPtr
          .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> dcflight_get_queued_events() {
    return _dcflight_get_queued_events();
  }

  late final _dcflight_get_queued_eventsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'dcflight_get_queued_events');
  late final _dcflight_get_queued_events =
      _dcflight_get_queued_eventsPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  void dcflight_process_event_queue() {
    return _dcflight_process_event_queue();
  }

  late final _dcflight_process_event_queuePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'dcflight_process_event_queue');
  late final _dcflight_process_event_queue =
      _dcflight_process_event_queuePtr.asFunction<void Function()>();

  ffi.Pointer<ffi.Char> dcflight_get_queued_screen_dimensions() {
    return _dcflight_get_queued_screen_dimensions();
  }

  late final _dcflight_get_queued_screen_dimensionsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'dcflight_get_queued_screen_dimensions');
  late final _dcflight_get_queued_screen_dimensions =
      _dcflight_get_queued_screen_dimensionsPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  void dcflight_process_screen_dimensions_queue() {
    return _dcflight_process_screen_dimensions_queue();
  }

  late final _dcflight_process_screen_dimensions_queuePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'dcflight_process_screen_dimensions_queue');
  late final _dcflight_process_screen_dimensions_queue =
      _dcflight_process_screen_dimensions_queuePtr.asFunction<void Function()>();

  /// Get session token for hot restart detection
  /// resultJson: Output buffer for JSON result (must be pre-allocated, at least 256 bytes)
  /// resultSize: Size of resultJson buffer
  /// Returns true if successful, false otherwise
  bool dcflight_get_session_token(
    ffi.Pointer<ffi.Char> resultJson,
    int resultSize,
  ) {
    return _dcflight_get_session_token(
      resultJson,
      resultSize,
    );
  }

  late final _dcflight_get_session_tokenPtr = _lookup<
          ffi
          .NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Int32)>>(
      'dcflight_get_session_token');
  late final _dcflight_get_session_token = _dcflight_get_session_tokenPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Char>, int)>();

  /// Create a new session token for hot restart detection
  /// resultJson: Output buffer for JSON result (must be pre-allocated, at least 256 bytes)
  /// resultSize: Size of resultJson buffer
  /// Returns true if successful, false otherwise
  bool dcflight_create_session_token(
    ffi.Pointer<ffi.Char> resultJson,
    int resultSize,
  ) {
    return _dcflight_create_session_token(
      resultJson,
      resultSize,
    );
  }

  late final _dcflight_create_session_tokenPtr = _lookup<
          ffi
          .NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Int32)>>(
      'dcflight_create_session_token');
  late final _dcflight_create_session_token = _dcflight_create_session_tokenPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Char>, int)>();

  /// Clear session token
  void dcflight_clear_session_token() {
    return _dcflight_clear_session_token();
  }

  late final _dcflight_clear_session_tokenPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'dcflight_clear_session_token');
  late final _dcflight_clear_session_token =
      _dcflight_clear_session_tokenPtr.asFunction<void Function()>();

  /// Cleanup all native views (for hot restart)
  void dcflight_cleanup_views() {
    return _dcflight_cleanup_views();
  }

  late final _dcflight_cleanup_viewsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'dcflight_cleanup_views');
  late final _dcflight_cleanup_views =
      _dcflight_cleanup_viewsPtr.asFunction<void Function()>();
}

/// mbstate_t is an opaque object to keep conversion state, during multibyte
/// stream conversions.  The content must not be referenced by user programs.
final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  /// for alignment
  @ffi.LongLong()
  external int _mbstateL;
}

final class __darwin_pthread_handler_rec extends ffi.Struct {
  /// Routine to call
  external ffi
      .Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      __routine;

  /// Argument to pass
  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}

/// Set event callback function pointer for native-to-Dart event communication
/// This function will be called when native events occur
/// callback: Function pointer that takes (viewId, eventType, eventDataJson) and returns void
/// The callback signature: void callback(int32_t viewId, const char* eventType, const char* eventDataJson)
typedef DCFlightEventCallback
    = ffi.Pointer<ffi.NativeFunction<DCFlightEventCallbackFunction>>;
typedef DCFlightEventCallbackFunction = ffi.Void Function(ffi.Int32 viewId,
    ffi.Pointer<ffi.Char> eventType, ffi.Pointer<ffi.Char> eventDataJson);
typedef DartDCFlightEventCallbackFunction = void Function(int viewId,
    ffi.Pointer<ffi.Char> eventType, ffi.Pointer<ffi.Char> eventDataJson);

/// Set screen dimensions callback function pointer for native-to-Dart communication
/// This function will be called when screen dimensions change
/// callback: Function pointer that takes (dimensionsJson) and returns void
/// The callback signature: void callback(const char* dimensionsJson)
typedef DCFlightScreenDimensionsCallback
    = ffi.Pointer<ffi.NativeFunction<DCFlightScreenDimensionsCallbackFunction>>;
typedef DCFlightScreenDimensionsCallbackFunction = ffi.Void Function(
    ffi.Pointer<ffi.Char> dimensionsJson);
typedef DartDCFlightScreenDimensionsCallbackFunction = void Function(
    ffi.Pointer<ffi.Char> dimensionsJson);

const int __WORDSIZE = 64;

const int __has_safe_buffers = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 1;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 1;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_VERS_1050 = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __has_bounds_safety_attributes = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;
